# semfora-explora

./: .gitignore  AMORPHOUS_BLOBS.md  ARCHITECTURE.md  DATASET_DESIGN.md  FEATURE_REVIEW.md  PATTERNS.md  PERCEPTION_ARCH.md  README.md  ROADMAP.md  instrumentation.py  package.json  pyproject.toml  requirements.txt  start.sh  usersim.yaml
backend/: analyze.py  db.py  enrich.py  main.py  requirements.txt  win95.html
data/: CAD_Sketcher.db  CAD_Sketcher.meta.json  CAD_Sketcher@05100af.db  CAD_Sketcher@2425a78.db  CAD_Sketcher@6d8ad09.db  CAD_Sketcher@be3719c.db  adk-playground.db  adk-playground@3a9ae78.db  adk-playground@5c8df1f.db  adk-playground@642990e.db  adk-playground@d932031.db  agent-cloud-demos@81102043426e.db  agent-cloud-demos@HEAD.db  booking-management-system@781273feedad.db  booking-management-system@HEAD.db  ca_rts.db  ca_rts@5089ccd.db  ca_rts@67fb182.db  ca_rts@8e1347e.db  ca_rts@dc8b566.db  ca_rts@e871e68.db  cloudflare-agents@056b5d2.db  cloudflare-agents@7ddafa7.db  cloudflare-agents@97c6702.db  cloudflare-agents@bd22d60.db  cloudflare-agents@f6aa79f.db  dfaas_editor.db  dfaas_editor.meta.json  dfaas_editor@7cd26de.db  dfaas_editor@9bedb61.db  dfaas_editor@d218f23.db  dfaas_editor@e9b6afc.db  memU@4e8a035.db  memU@71e265e.db  memU@777f1ed.db  memU@abf315b.db  memU@be0a5c7.db  node-plex-api@863a105342e1.db  node-plex-api@HEAD.db  node-plex-api@ec42bea3458b.db  (+19 more)
docs/: feature-brainstorm-extended.md  graph-algorithms.md  use-case-blast-radius.md  use-case-call-graph-diff.md  use-case-dead-code-and-entrypoints.md  use-case-feature-risk.md  use-case-legacy-modernization.md  use-case-load-bearing-nodes.md  use-case-module-coupling.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
mockups/: blast-radius.html  call-graph-diff.html  dead-code.html  feature-risk.html  index.html  legacy-planner.html  (+2 more)
(+241 files in other folders)
