[tool.pytest.ini_options]
# Add usersim/ to sys.path so its modules can import each other without
# being a Python package (avoids shadowing the installed usersim library).
pythonpath = ["usersim"]
testpaths  = ["tests", "usersim"]

[project.optional-dependencies]
test = ["pytest>=7", "z3-solver>=4.12"]
dev = ["pytest>=7", "z3-solver>=4.12", "usersim @ git+https://github.com/yamchabot/usersim@main"]
