[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "semfora-explora"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "networkx>=3.3",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pydantic>=2.0",
    "z3-solver>=4.12",
    "usersim @ git+https://github.com/yamchabot/usersim@main",
]

[project.optional-dependencies]
test = ["pytest>=7"]
dev  = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["*"]

[tool.pytest.ini_options]
pythonpath = ["user_simulation"]
testpaths  = ["tests", "user_simulation"]
